# AfterImage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  afterimage.py  pyproject.toml
.github/: FUNDING.yml
afterimage/: __init__.py  __main__.py  cli.py  crypto.py  fountain.py  optical.py  protocol.py
afterimage-rs/: Cargo.toml  README.md
afterimage-rs/crates/afterimage-cli/: Cargo.toml
afterimage-rs/crates/afterimage-cli/src/: main.rs
afterimage-rs/crates/afterimage-solana/src/: lib.rs  multisig_request.rs  multisig_response.rs  multisigner.rs
tests/: test_crypto.py  test_fountain.py  test_protocol.py
