[package]
name        = "afterimage"
description = "Air-gap file transfer via animated QR codes — CLI binary"
version.workspace     = true
edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "afterimage"
path = "src/main.rs"

[dependencies]
afterimage-core    = { workspace = true }
afterimage-optical = { workspace = true }
afterimage-solana  = { workspace = true, optional = true }

clap      = { workspace = true }
rpassword = { workspace = true }
indicatif = { workspace = true }
serde_json  = { workspace = true, optional = true }
bincode     = { workspace = true, optional = true }
solana-sdk  = { workspace = true, optional = true }

[features]
default = ["display", "camera"]
display = ["afterimage-optical/display"]
camera  = ["afterimage-optical/camera"]
solana  = ["dep:afterimage-solana", "dep:serde_json", "dep:bincode", "dep:solana-sdk"]
